improved the UI , shifted from bootstrap to material UI

--- a/frontend/bookreview/public/index.html
+++ b/frontend/bookreview/public/index.html
@@ -19,6 +19,14 @@
     
     <title>Book Peek</title>
   </head>
+  <style>
+    body{
+
+      margin:0px;
+      padding: 0px;
+
+    }
+  </style>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
